kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hipstershop-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - hipstershop.yc.ga66a.ru
      secretName: hipstershop.yc.ga66a.ru
  rules:
    - host: hipstershop.yc.ga66a.ru
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 8080
